# practice-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMake_common.txt  common.make
accumulate/: CMakeLists.txt  accumulate.cc
async/: CMakeLists.txt  async.cc
bitwise/: .gitignore  CMakeLists.txt  Makefile  bitwise.cc  bitwise.cpp
byte/: CMakeLists.txt  byte.cc
classes/: CMakeLists.txt  Makefile  Person.cpp  Person.h  classes.cc  classes.cpp  person.cc  person.h
collections/: CMakeLists.txt  animal.cc  animal.h  being.cc  being.h  collections.cc  human.cc  human.h
common/: CMakeLists.txt  CMake_common.txt  dbg.h  hexdump.h  log.cc  log.h  perf.h  person.cc  person.h  utils.cc  utils.cpp  utils.h
common/common/: dbg.h  log.cc  perf.h  person.cc  person.h
common/dbg/: hexdump.h
common/perf/: timer.h
common/tests/: CMakeLists.txt  person_tests.cc
const/: .gitignore  CMakeLists.txt  Makefile  bank_account.cc  bank_account.h  const.cc
const/tests/: CMakeLists.txt  bankaccount_tests.cc
customliterals/: CMakeLists.txt  customliterals.cc
files/: .gitignore  CMakeLists.txt  Makefile  files.cc  files.cpp  foo.txt  readers.cc  readers.h
format/: .gitignore  CMakeLists.txt  Makefile  format.cc  format.cpp
hash/: .gitignore  CMakeLists.txt  Makefile  hash  hash.cc
hex/: CMakeLists.txt  hex.cc  hexdump.h  person.cc  person.h
intsize/: .gitignore  CMakeLists.txt  Makefile  intsize.cc  intsize.cpp
iterators/: CMakeLists.txt  iterators.cc
lambdas/: CMakeLists.txt  lambdas.cc
linkedlist/: CMakeLists.txt  LinkedList.cpp  LinkedList.hxx  Node.cpp  Node.hxx  llapp.cpp
literals/: .gitignore  CMakeLists.txt  Makefile  literals.cc  literals.cpp
logtest/: CMakeLists.txt  logtest.cc
move/: CMakeLists.txt  move.cc
opt/: .gitignore  CMakeLists.txt  opt.cc
password/: CMakeLists.txt  generate_wordlist.cc  password.cc
person/: CMakeLists.txt  person.cc
rvaltest/: CMakeLists.txt  rvaltest.cc
streaming/: CMakeLists.txt  people.txt  streaming.cc
strings/: .gitignore  CMakeLists.txt  Makefile  strings.cc  strings.cpp
strlen/: CMakeLists.txt  strlen.cc
templ/: CMakeLists.txt  templ.cc
term/: CMakeLists.txt  term.cc
time/: .gitignore  CMakeLists.txt  Makefile  time.cc
views/: CMakeLists.txt  views.cc
virt/: CMakeLists.txt  virt.cc
